tests/valid/defer_stmt.ri
fn main() {
    let x = 0;
    
    defer {
        x;
    }

    defer(success) {
        x;
    }
    
    defer(error) {
        x;
    }
}