tests/invalid/checker/mut_static.ri
static mut MUTABLE_STATIC: i32 = 3;

fn main() {
    let x = MUTABLE_STATIC;
}
